atualizando pesquisa, finalizando conhecimentos base de python

--- a/documents/python_notes/notebooks/dicionary.ipynb
+++ b/documents/python_notes/notebooks/dicionary.ipynb
@@ -259,6 +259,52 @@
    "source": [
     "print(alunos_dicionario['Felipe']['idade'])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Parte II - Falando sobre a metodos de um dicionário\n",
+    "\n",
+    "Durante minha pesquisa descobri alguns métodos e jeitos especificos de se acessar um ***diconário dentro de uma lista***.\n",
+    "\n",
+    "Vamos supor a seguinte lista/dicionário:\n",
+    "\n",
+    "    alunos = [\n",
+    "        {\n",
+    "            'NOME': 'Daniel'\n",
+    "            'CPF': 00000000000\n",
+    "            'SEXO': 'M'\n",
+    "        },\n",
+    "        {\n",
+    "            'NOME': 'Sarah'\n",
+    "            'CPF': 00000000000\n",
+    "            'SEXO': 'F'\n",
+    "        }\n",
+    "    ]\n",
+    "\n",
+    "\n",
+    "Assim como uma lista comum, esta lista/dicionário também possui seus indices começando sempre pelo indice zero, para que possamos navegar uma lista, é muito simples basta criar um laço de repetição for e navegar por meio de seus indices usando a função \"enumerate\".\n",
+    "\n",
+    "Ao criar um laço de repeticção com o enumerate o computador entende que o primeiro parametro passado é o indice e o segundo é o valor respectivo ao indice da vez, por exemplo, se estivessemos com o indice zero atualmente receberiamos o parametros do dicionário 0 que contém as informações de Daniel.\n",
+    "\n",
+    "Por isso conseguimos acessar um valor expecifico apenas com um único parámetro em um laço de repetição, pois este parametro solitário é o indice. E como se faz para acessar um valor expecifico em uma matriz? primeiro você acessa o indice e depois você acessa o item. De forma similar isso ocorre aqui, mas agora o indice é o \"aluno\" e o que eu estou acessando é a chave que contém nesse aluno\n",
+    "\n",
+    "    for aluno in alunos:\n",
+    "        print(f'{aluno[\"NOME\"]} - {aluno[\"CPF\"]}')\n",
+    "\n",
+    "\n",
+    "Olhe por exemplo esse trecho de uma função que criei no código do exercício 01:\n",
+    "\n",
+    "    def rename(find_aluno, aluno):\n",
+    "        print(f'O aluno {aluno} será atualizado!')\n",
+    "\n",
+    "        alunos[find_aluno]['Nome'] = input('Digite o novo nome do aluno:')\n",
+    "\n",
+    "O que eu estou fazendo aqui é primeiro passar 2 parametros do usuário para função, esses parámetros são provenientes de uma outra função que é executada antes desta parte e fornece o indice do item selecionado através do parametro **\"find_aluno\"** com isso eu consigo acessar itens expecificos dentro do dicionário por meio deste parametro que foi repassado para mim, é o que ocorre no trecho: `alunos[find_aluno]['Nome']`.\n",
+    "\n",
+    "---"
+   ]
   }
  ],
  "metadata": {
